# pettingzoo-classicenvs

./: Makefile  README.md  main.py  pyproject.toml
core/: traineval.py
