[project]
name = "PettingZoo-ConnectFour"
version = "0.1.0"
description = "PettingZoo ConnectFour example with Rye as dependency manager"
authors = [{name = "Brandon Corfman", email = "h9tbgnbbk@privaterelay.appleid.com"}]
dependencies = [
    "pettingzoo>= 1.24.3",
    "pygame>=2.5.2",
    "stable-baselines3>=2.3.2",
    "sb3-contrib>=2.3.0",
]
license = "MIT"
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pettingzoo-connectfour"]

